--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,20 @@
-name: build-imagegz-only
+name: build-imagegz-popkernel-stockconfig
 
 on:
   workflow_dispatch:
     inputs:
       kernel_repo:
-        description: "Kernel git repo URL"
+        description: "Kernel git repo URL (Pop Kernel recommended)"
         required: true
-        default: "https://github.com/whatawurst/android_kernel_sony_msm8998.git"
+        default: "https://github.com/linckandrea/android_kernel_sony_msm8998-EAS.git"
       kernel_branch:
-        description: "Preferred kernel branch (auto-fallback if not found)"
+        description: "Kernel branch/tag (match your running kernel: 14-r3-p)"
         required: true
-        default: "lineage-22.0"
+        default: "14-r3-p"
       defconfig:
-        description: "Kernel defconfig (optional; build_kernel.sh auto-picks if missing/wrong)"
+        description: "Fallback defconfig (only used if stock.config missing)"
         required: true
-        default: "lineage_yoshino_defconfig"
+        default: ""
 
 jobs:
   build:
@@ -23,10 +23,20 @@ jobs:
       TZ: Asia/Tokyo
 
     steps:
-      - name: Checkout repo
+      - name: Checkout this repo
         uses: actions/checkout@v4
 
-      - name: Install deps
+      - name: Sanity check inputs/files
+        run: |
+          set -eux
+          echo "kernel_repo=${{ inputs.kernel_repo }}"
+          echo "kernel_branch=${{ inputs.kernel_branch }}"
+          echo "defconfig=${{ inputs.defconfig }}"
+          test -f ./build_kernel.sh
+          # stock.config 推荐一定要有（没有也能跑，但可能黑屏）
+          ls -lah ./stock.config || true
+
+      - name: Install build deps
         run: |
           set -eux
           sudo apt-get update
@@ -35,51 +45,26 @@ jobs:
             python3 unzip zlib1g-dev lz4 ca-certificates file \
             gcc-aarch64-linux-gnu gcc-arm-linux-gnueabihf
 
-      # ---- Select kernel branch (auto fallback) ----
-      - name: Select kernel branch (auto fallback)
-        id: pick_branch
-        run: |
-          set -eux
-          REPO="${{ inputs.kernel_repo }}"
-          PREFERRED="${{ inputs.kernel_branch }}"
-
-          pick() {
-            b="$1"
-            if git ls-remote --heads "$REPO" "refs/heads/$b" | grep -q "refs/heads/$b"; then
-              echo "$b"
-              return 0
-            fi
-            return 1
-          }
-
-          for b in "$PREFERRED" lineage-22 lineage-21.0 lineage-21 lineage-20.0 lineage-20 lineage-19.1 lineage-19; do
-            if pick "$b" >/dev/null; then
-              echo "branch=$b" >> "$GITHUB_OUTPUT"
-              echo "Selected branch: $b"
-              exit 0
-            fi
-          done
-
-          echo "ERROR: No suitable branch found on $REPO"
-          exit 1
-
-      - name: Build Image.gz
+      - name: Build Image.gz (from stock.config if present)
         env:
-          # 可选：如果你在仓库 Settings -> Secrets -> Actions 里设置了
-          # Name: KERNEL_GITHUB_TOKEN
+          # 可选：如果内核仓库需要权限/你网络环境需要 token
+          # 在 GitHub 仓库 Settings -> Secrets and variables -> Actions -> New repository secret
+          # 名字填：KERNEL_GITHUB_TOKEN
           KERNEL_GITHUB_TOKEN: ${{ secrets.KERNEL_GITHUB_TOKEN }}
         run: |
           set -eux
-          test -f ./build_kernel.sh
           chmod +x ./build_kernel.sh
 
-          ./build_kernel.sh "${{ inputs.kernel_repo }}" "${{ steps.pick_branch.outputs.branch }}" "${{ inputs.defconfig }}"
+          # 你的 build_kernel.sh 需要支持：
+          # - 如果仓库根目录存在 stock.config，就用它作为 out/.config 并 make olddefconfig
+          # - 输出 out/Image.gz
+          ./build_kernel.sh "${{ inputs.kernel_repo }}" "${{ inputs.kernel_branch }}" "${{ inputs.defconfig }}"
 
           test -f out/Image.gz
           ls -lah out/Image.gz
           file out/Image.gz || true
 
-      - name: Upload Image.gz
+      - name: Upload Image.gz artifact
         uses: actions/upload-artifact@v4
         with:
           name: Image-gz
